--- a/index.html
+++ b/index.html
@@ -5,8 +5,141 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header class="main-header">
+      <div class="container">
+        <nav class="main-navigation">
+          <ul>
+            <li>
+              <a href="#">ИНФОРМАЦИЯ</a>
+            </li>
+            <li>
+              <a href="#">ФОТО И ВИДЕО</a>
+            </li>
+            <li>
+              <a href="#">КАРТА ШТАТА</a>
+            </li>
+            <li>
+              <a href="#">ГОСТИНИЦЫ</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="index-logo">
+          <img src="http://placehold.it/150x100" width="100" height="100" alt="">
+        </div>
+      </div>
+    </header>
+    <main class="container">
+      <div class="greetings">
+        <h2>WELCOME</h2>
+        <p>- to the gorgeous -</p>
+        <h1>SEDONA</h1>
+        <div class="main-tagline">
+        <p>Because Grand Canyon sucks!</p>
+        </div>
+      </div>
+      <article>
+        <div class="index-tagline">
+          <p>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</p>
+        </div>
+        <div class="index-reasons">
+          <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА ЛУЧШЕ, ЧЕМ ГРАНД КАНЬОН!</p>
+        </div>
+        <section class="index-content-1">
+          <div class="block-1">
+            <p class="top">НАСТОЯЩИЙ ГОРОДОК</p>
+            <p class="center">- №1 -</p>
+            <p>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+          </div>
+          <div class="block-2">
+            <img src="http://placehold.it/150x100">
+          </div>
+          <div class="block-3">
+            <img src="http://placehold.it/150x100">
+            <p class="center">ЖИЛЬЕ</p>
+            <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, КАК В КИНО!</p>
+          </div>
+          <div class="block-4">
+            <img src="http://placehold.it/150x100">
+            <p class="center">ЕДА</p>
+            <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ ЧИЗБУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</p>
+          </div>
+          <div class="block-5">
+            <img src="http://placehold.it/150x100">
+            <p class="center">СУВЕНИРЫ</p>
+            <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
+          </div>
+        </section>
+        <section class="index-content-2">
+          <div class="block-1">
+            <img src="http://placehold.it/150x100">
+          </div>
+          <div class="block-2">
+            <p class="top">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</p>
+            <p class="center">- №2 -</p>
+            <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ, ЕСЛИ КОНЕЧНО ОСМЕЛИТЕСЬ!</p>
+          </div>
+          <div class="block-3">
+            <p class="top">НЕБОЛЬШАЯ ПЛОЩАДЬ</p>
+            <p class="center">- №3 -</p>
+            <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО!</p>
+          </div>
+          <div class="block-4">
+            <p class="top">КРАСИВАЯ ДОРОГА</p>
+            <p class="center">- №4 -</p>
+            <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+          </div>
+          <div class="block-5">
+            <p class="top">МАЛО ТУРИСТОВ</p>
+            <p class="center">- №5 -</p>
+            <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
+          </div>
+        </section>
+      </article>
+      <p class="interested">ЗАИНТЕРЕСОВАЛИСЬ?</p>
+      <div class="index-advice">
+        <p>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКА ЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
+      </div>
+      <div class="index-booking">
+        <form action="/echo" method="post">
+          <fieldset>
+            <legend>БУКИНГ В СЕДОНЕ</legend>
+            <div class="index-booking-title">
+              <p>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</p>
+              <label for="date-check-in">ДАТА ЗАЕЗДА:</label>
+              <input type="date" id="date-check-in">
+              <label for="date-check-out">ДАТА ВЫЕЗДА:</label>
+              <input type="date" id="date-check-out">
+              <label for="amount-adult">ВЗРОСЛЫЕ:</label>
+              <input type="number" min="1" max="50" step="1" id="amount-adult" name="amount-adult">
+              <label for="amount-children">ДЕТИ:</label>
+              <input type="number" min="0" max="50" step="1" id="amount-children" name="amount-children">
+              <input type="submit" value="НАЙТИ">
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <div class="geolocation">
+        <img src="http://placehold.it/150x100">
+      </div>
+    </main>
+    <footer class="main-footer">
+      <div class="container">
+        <div class="footer-hashtag">
+          <p>#VISITSEDONA</p>
+        </div>
+        <section class="footer-social">
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </section>
+        <section class="footer-copyright">
+          <p>WEBSITE BY</p>
+          <a class="logo-image" href="#">
+            <img src="http://placehold.it/150x100">
+          </a>
+        </section>
+      </div>
+    </footer>
+    <!--<<p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>-->
   </body>
 </html>
