Исправил заголовки в начале страницы на img
Виталий, лектор по фотошопу, открыл мне глаза, что нужный шрифт я не
подберу и легче вырезать из макета картнику с надписью

--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
     </header>
     <main class="container">
       <div class="greetings">
-        <h2>WELCOME</h2>
+        <!--<h2>WELCOME</h2>
         <p>- to the gorgeous -</p>
         <h1>SEDONA</h1>
         <div class="main-tagline">
         <p>Because Grand Canyon sucks!</p>
-        </div>
+        </div>-->
+        <img class="mountains" src="http://placehold.it/150x100">
+        <img class="welcome" src="http://placehold.it/150x100">
+        <img class="gorgeous" src="http://placehold.it/150x100">
+        <img class="sedona" src="http://placehold.it/150x100">
+        <img class="taqline" src="http://placehold.it/150x100">
       </div>
       <article>
         <div class="index-tagline">
