Изменения согласно разговора в skype
В хедере разбил список на 2. Все <p> перевел в <div>. <article> убрал.
поставил <br>, где нужен зазор между строками. добавид <button>,
октрывающий поп-ап. добавил required в форму index. изменил  названия
классов в меру своего разумения. в inner: 0 и 3000   поставил в value
тэга input

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li>
               <a href="#">ФОТО И ВИДЕО</a>
             </li>
+          </ul>
+          <ul>
             <li>
               <a href="#">КАРТА ШТАТА</a>
             </li>
@@ -30,92 +32,88 @@
     </header>
     <main class="container">
       <div class="greetings">
-        <!--<h2>WELCOME</h2>
-        <p>- to the gorgeous -</p>
-        <h1>SEDONA</h1>
-        <div class="main-tagline">
-        <p>Because Grand Canyon sucks!</p>
-        </div>-->
-        <img class="mountains" src="http://placehold.it/150x100">
-        <img class="welcome" src="http://placehold.it/150x100">
-        <img class="gorgeous" src="http://placehold.it/150x100">
-        <img class="sedona" src="http://placehold.it/150x100">
+        <img class="mountains-banner" src="http://placehold.it/150x100">
+        <img class="welcome-banner-1" src="http://placehold.it/150x100">
+        <img class="welcome-banner-2" src="http://placehold.it/150x100">
+        <img class="title" src="http://placehold.it/150x100">
         <img class="taqline" src="http://placehold.it/150x100">
       </div>
-      <article>
         <div class="index-tagline">
-          <p>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</p>
+          СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,
+          <br>
+          ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!
         </div>
         <div class="index-reasons">
-          <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА ЛУЧШЕ, ЧЕМ ГРАНД КАНЬОН!</p>
+          РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА ЛУЧШЕ, ЧЕМ ГРАНД КАНЬОН!
         </div>
-        <section class="index-content-1">
-          <div class="block-1">
-            <p class="top">НАСТОЯЩИЙ ГОРОДОК</p>
-            <p class="center">- №1 -</p>
-            <p>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+        <section class="index-city-info">
+          <div class="info-main">
+            <div class="info-main-text">НАСТОЯЩИЙ ГОРОДОК</div>
+            <div class="info-main-number">- №1 -</div>
+            <div>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</div>
           </div>
-          <div class="block-2">
+          <div class="info-image">
             <img src="http://placehold.it/150x100">
           </div>
-          <div class="block-3">
+          <div class="info-housing">
             <img src="http://placehold.it/150x100">
-            <p class="center">ЖИЛЬЕ</p>
-            <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, КАК В КИНО!</p>
+            <div class="info-housing-text">ЖИЛЬЕ</div>
+            <div>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, КАК В КИНО!</div>
           </div>
-          <div class="block-4">
+          <div class="info-food">
             <img src="http://placehold.it/150x100">
-            <p class="center">ЕДА</p>
-            <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ ЧИЗБУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</p>
+            <div class="info-food-text">ЕДА</div>
+            <div>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ ЧИЗБУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</div>
           </div>
-          <div class="block-5">
+          <div class="info-souvenirs">
             <img src="http://placehold.it/150x100">
-            <p class="center">СУВЕНИРЫ</p>
-            <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
+            <div class="info-souvenirs-text">СУВЕНИРЫ</div>
+            <div>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</div>
           </div>
         </section>
-        <section class="index-content-2">
-          <div class="block-1">
+        <section class="index-city-attractions">
+          <div class="attractions-image">
             <img src="http://placehold.it/150x100">
           </div>
-          <div class="block-2">
-            <p class="top">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</p>
-            <p class="center">- №2 -</p>
+          <div class="attractions-main">
+            <div class="attractions-main-text">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</div>
+            <p class="attractions-main-number">- №2 -</p>
             <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ, ЕСЛИ КОНЕЧНО ОСМЕЛИТЕСЬ!</p>
           </div>
-          <div class="block-3">
-            <p class="top">НЕБОЛЬШАЯ ПЛОЩАДЬ</p>
-            <p class="center">- №3 -</p>
+          <div class="attractions-square">
+            <p class="attractions-square-text">НЕБОЛЬШАЯ ПЛОЩАДЬ</p>
+            <p class="attractions-square-number">- №3 -</p>
             <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО!</p>
           </div>
-          <div class="block-4">
-            <p class="top">КРАСИВАЯ ДОРОГА</p>
-            <p class="center">- №4 -</p>
+          <div class="attractions-road">
+            <p class="attractions-road-text">КРАСИВАЯ ДОРОГА</p>
+            <p class="attractions-road-number">- №4 -</p>
             <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
           </div>
-          <div class="block-5">
-            <p class="top">МАЛО ТУРИСТОВ</p>
-            <p class="center">- №5 -</p>
+          <div class="attractions-tourists">
+            <p class="attractions-tourists-text">МАЛО ТУРИСТОВ</p>
+            <p class="attractions-tourists-number">- №5 -</p>
             <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
           </div>
         </section>
-      </article>
-      <p class="interested">ЗАИНТЕРЕСОВАЛИСЬ?</p>
+      <div class="interested">ЗАИНТЕРЕСОВАЛИСЬ?</div>
       <div class="index-advice">
-        <p>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКА ЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
+        УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ,
+        <br>
+        И МЫ ПОКА ЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ
       </div>
+      <button class="index-hotel-search">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
       <div class="index-booking">
         <form action="/echo" method="post">
           <fieldset>
             <legend>БУКИНГ В СЕДОНЕ</legend>
             <div class="index-booking-title">
-              <p>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</p>
               <label for="date-check-in">ДАТА ЗАЕЗДА:</label>
-              <input type="date" id="date-check-in">
+              <input type="date" id="date-check-in" required>
               <label for="date-check-out">ДАТА ВЫЕЗДА:</label>
-              <input type="date" id="date-check-out">
+              <input type="date" id="date-check-out" required>
               <label for="amount-adult">ВЗРОСЛЫЕ:</label>
-              <input type="number" min="1" max="50" step="1" id="amount-adult" name="amount-adult">
+              <input type="number" min="1" max="50" step="1" id="amount-adult" name="amount-adult" required>
               <label for="amount-children">ДЕТИ:</label>
               <input type="number" min="0" max="50" step="1" id="amount-children" name="amount-children">
               <input type="submit" value="НАЙТИ">
