Сделал 3 img  в начале, а не 4!!! Во втором section  правильно завернул </div>

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <main class="container">
       <div class="greetings">
         <img class="welcome-banner-1" src="http://placehold.it/150x100">
-        <img class="welcome-banner-2" src="http://placehold.it/150x100">
         <img class="title" src="http://placehold.it/150x100">
         <img class="taqline" src="http://placehold.it/150x100">
       </div>
@@ -72,9 +71,10 @@
         </section>
         <section class="index-city-attractions">
           <div class="attractions-main">
-            <div class="attractions-main-text">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</div>
+            <div class="attractions-main-text">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА
             <div class="attractions-main-number">- №2 -</div>
             <div>ДА, ПО НЕМУ МОЖНО ПРОЙТИ, ЕСЛИ КОНЕЧНО ОСМЕЛИТЕСЬ!</div>
+            </div>
           </div>
           <div class="attractions-logistics">
           <div class="column attractions-square">
