Добавил картинки и стили текста

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
           </ul>
         </nav>
         <div class="index-logo">
-          <img src="http://placehold.it/150x100" width="100" height="100" alt="">
+          <img src="img/logo-both.png" width="100" height="100" alt="">
         </div>
       </div>
     </header>
     <main class="container">
       <div class="greetings">
-        <img class="welcome-banner-1" src="http://placehold.it/150x100">
-        <img class="title" src="http://placehold.it/150x100">
-        <img class="taqline" src="http://placehold.it/150x100">
+        <img class="title" src="img/index-welcome.png" width="100" height="100" alt="">
+        <img class="line" src="img/index-brown-line.png" width="100" height="100" alt="">
+        <img class="gorgeous" src="img/index-to-the-gorgeous.png" width="100" height="100" alt="">
+        <img class="sedona" src="img/index-Sedona.png" width="100" height="100" alt="">
+        <img class="taqline" src="img/index-Because-the-Grand-Canyon-sucks.png" width="100" height="100" alt="">
       </div>
         <div class="index-tagline">
           СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,
@@ -53,17 +55,17 @@
           </div>
           <div class="info-needs">
             <div class="column info-housing">
-              <img src="http://placehold.it/150x100">
+              <img src="img/index-house.png" width="100" height="100" alt="">
               <div class="info-housing-text">ЖИЛЬЕ</div>
               <div>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, КАК В КИНО!</div>
             </div>
             <div class="column info-food">
-              <img src="http://placehold.it/150x100">
+              <img src="img/index-burger.png" width="100" height="100" alt="">
               <div class="info-food-text">ЕДА</div>
               <div>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ ЧИЗБУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</div>
             </div>
             <div class="column info-souvenirs">
-              <img src="http://placehold.it/150x100">
+              <img src="img/index-gift.png" width="100" height="100" alt="">
               <div class="info-souvenirs-text">СУВЕНИРЫ</div>
               <div>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</div>
             </div>
@@ -115,14 +117,13 @@
                 <input type="number" min="1" max="50" step="1" id="amount-adult" name="amount-adult" required>
                 <label for="amount-children">ДЕТИ:</label>
                 <input type="number" min="0" max="50" step="1" id="amount-children" name="amount-children">
-                <input type="submit" value="НАЙТИ">
+                <button class="index-btn">НАЙТИ</button>
               </div>
             </fieldset>
           </form>
         </div>
       </div>
       <div class="geolocation">
-        <img src="http://placehold.it/150x100">
       </div>
     </main>
     <footer class="main-footer">
@@ -138,7 +139,7 @@
         <section class="footer-copyright">
           <p>WEBSITE BY</p>
           <a class="logo-image" href="#">
-            <img src="http://placehold.it/150x100">
+            <img src="img/html-academy-logo.png" width="100" height="100" alt="">
           </a>
         </section>
       </div>
