--- a/inner.html
+++ b/inner.html
@@ -26,7 +26,7 @@
         </ul>
       </nav>
       <div class="index-logo">
-        <img src="http://placehold.it/150x100" width="100" height="100" alt="">
+        <img src="img/logo-both.png" width="100" height="100" alt="">
       </div>
     </div>
   </header>
@@ -70,9 +70,10 @@
             </ul>
           </div>
           <div class="inner-range-submit">
-            <div class="price"><label for="price">СТОИМОСТЬ В СУТКИ:</label></div>
+            <div class="price">
+              <label>СТОИМОСТЬ В СУТКИ:</label>
+            </div>
             <div class="range">ОТ <input type="text" name="startprice" value="0">  ДО <input type="text" name="finalprice" value="3000"></div>
-            <!--<input type="range" id="price" name="price" min="0" max="3000" step="1">-->
             <div class="range-wrapper">
               <div class="range-min">
               </div>
@@ -83,7 +84,7 @@
                 </div>
               </div>
             </div>
-            <button type="submit" value="ПОКАЗАТЬ"/>
+            <button class="inner-btn">ПОКАЗАТЬ</button>
           </div>
         </fieldset>
       </form>
@@ -100,7 +101,7 @@
     <div class="hotel-all">
     <div class="hotel">
       <div class="hotel-img">
-      <img  src="http://placehold.it/150x100">
+        <img src="img/inner-amara.jpg" width="100" height="100" alt="">
       </div>
       <div class="hotel-info">
         <a href="#" class="hotel-name"><h4>AMARA RESORT & SPA</h4></a>
@@ -110,13 +111,13 @@
         <a class="btn-order">ЗАБРОНИРОВАТЬ</a>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="http://placehold.it/150x100">
+        <img class="hotel-stars" src="img/inner-stars-4.png" width="100" height="100" alt="">
         <div class="hotel-rating-number">РЕЙТИНГ: 8.5</div>
       </div>
     </div>
     <div class="hotel">
       <div class="hotel-img">
-      <img src="http://placehold.it/150x100">
+        <img src="img/inner-desert.jpg" width="100" height="100" alt="">
       </div>
       <div class="hotel-info">
         <a href="#" class="hotel-name"><h4>DESERT QUAIL INN</h4></a>
@@ -126,13 +127,13 @@
         <a class="btn-order">ЗАБРОНИРОВАТЬ</a>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="http://placehold.it/150x100">
+        <img class="hotel-stars" src="img/inner-stars-3.png" width="100" height="100" alt="">
         <div class="hotel-rating-number">РЕЙТИНГ: 8.9</div>
       </div>
     </div>
     <div class="hotel">
       <div class="hotel-img">
-      <img src="http://placehold.it/150x100">
+        <img src="img/inner-poco-diablo.jpg" width="100" height="100" alt="">
       </div>
       <div class="hotel-info">
         <a href="#" class="hotel-name"><h4>VILLAS AT POCCO DIABLO</h4></a>
@@ -142,7 +143,7 @@
         <a class="btn-order">ЗАБРОНИРОВАТЬ</a>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="http://placehold.it/150x100">
+        <img class="hotel-stars" src="img/inner-stars-2.png" width="100" height="100" alt="">
         <div class="hotel-rating-number">РЕЙТИНГ: 9.2</div>
       </div>
     </div>
@@ -161,7 +162,7 @@
       <section class="footer-copyright">
         <p>WEBSITE BY</p>
         <a class="logo-image" href="#">
-          <img src="http://placehold.it/150x100">
+          <img src="img/html-academy-logo.png" width="100" height="100" alt="">
         </a>
       </section>
     </div>
