Исправил размеры картинок

--- a/inner.html
+++ b/inner.html
@@ -27,7 +27,7 @@
         </ul>
       </nav>
       <div class="index-logo">
-        <img src="img/logo-both.png" width="100" height="100" alt="">
+        <img src="img/logo-both.png" width="138" height="70" alt="лого">
       </div>
     </div>
   </header>
@@ -102,7 +102,7 @@
     <div class="hotel-all">
     <div class="hotel">
       <div class="hotel-img">
-        <img src="img/inner-amara.jpg" width="100" height="100" alt="">
+        <img src="img/inner-amara.jpg" width="135" height="90" alt="AMARA RESORT & SPA">
       </div>
       <div class="hotel-info">
         <a href="#" class="hotel-name"><h4>AMARA RESORT & SPA</h4></a>
@@ -112,13 +112,13 @@
         <a class="btn-order">ЗАБРОНИРОВАТЬ</a>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="img/inner-stars-4.png" width="100" height="100" alt="">
+        <img class="hotel-stars" src="img/inner-stars-4.png" width="89" height="17" alt="4 stars">
         <div class="hotel-rating-number">РЕЙТИНГ: 8.5</div>
       </div>
     </div>
     <div class="hotel">
       <div class="hotel-img">
-        <img src="img/inner-desert.jpg" width="100" height="100" alt="">
+        <img src="img/inner-desert.jpg" width="135" height="90" alt="DESERT QUAIL INN">
       </div>
       <div class="hotel-info">
         <a href="#" class="hotel-name"><h4>DESERT QUAIL INN</h4></a>
@@ -128,13 +128,13 @@
         <a class="btn-order">ЗАБРОНИРОВАТЬ</a>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="img/inner-stars-3.png" width="100" height="100" alt="">
+        <img class="hotel-stars" src="img/inner-stars-3.png" width="67" height="17" alt="3 stars">
         <div class="hotel-rating-number">РЕЙТИНГ: 8.9</div>
       </div>
     </div>
     <div class="hotel">
       <div class="hotel-img">
-        <img src="img/inner-poco-diablo.jpg" width="100" height="100" alt="">
+        <img src="img/inner-poco-diablo.jpg" width="135" height="90" alt="VILLAS AT POCCO DIABLO">
       </div>
       <div class="hotel-info">
         <a href="#" class="hotel-name"><h4>VILLAS AT POCCO DIABLO</h4></a>
@@ -144,7 +144,7 @@
         <a class="btn-order">ЗАБРОНИРОВАТЬ</a>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="img/inner-stars-2.png" width="100" height="100" alt="">
+        <img class="hotel-stars" src="img/inner-stars-2.png" width="45" height="17" alt="2 stars">
         <div class="hotel-rating-number">РЕЙТИНГ: 9.2</div>
       </div>
     </div>
@@ -156,14 +156,14 @@
         <p>#VISITSEDONA</p>
       </div>
       <section class="footer-social">
-        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        <a class="social-btn social-btn-tw" href="#"><img src="img/t-logo.png" width="17" height="15" alt="twitter"></a>
+        <a class="social-btn social-btn-fb" href="#"><img src="img/f-logo.png" width="10" height="19" alt="facebook"></a>
+        <a class="social-btn social-btn-you" href="#"><img src="img/y-logo.png" width="20" height="16" alt="youtube"></a>
       </section>
       <section class="footer-copyright">
         <p>WEBSITE BY</p>
         <a class="logo-image" href="#">
-          <img src="img/html-academy-logo.png" width="100" height="100" alt="">
+          <img src="img/html-academy-logo.png" width="113" height="39" alt="html academy logo">
         </a>
       </section>
     </div>
