--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
           </ul>
         </nav>
         <div class="index-logo">
-          <img src="img/logo-both.png" width="100" height="100" alt="">
+          <img src="img/logo-both.png" width="138" height="70" alt="лого">
         </div>
       </div>
     </header>
     <main class="container">
       <div class="greetings">
-        <img class="title" src="img/index-welcome.png" width="100" height="100" alt="">
-        <img class="line" src="img/index-brown-line.png" width="100" height="100" alt="">
-        <img class="gorgeous" src="img/index-to-the-gorgeous.png" width="100" height="100" alt="">
-        <img class="sedona" src="img/index-Sedona.png" width="100" height="100" alt="">
-        <img class="taqline" src="img/index-Because-the-Grand-Canyon-sucks.png" width="100" height="100" alt="">
+        <img class="title" src="img/index-welcome.png" width="188" height="45" alt="welcome">
+        <img class="line" src="img/index-brown-line.png" width="256" height="2" alt="">
+        <img class="gorgeous" src="img/index-to-the-gorgeous.png" width="176" height="30" alt="to the gorgeous">
+        <img class="sedona" src="img/index-Sedona.png" width="458" height="78" alt="sedona">
+        <img class="taqline" src="img/index-Because-the-Grand-Canyon-sucks.png" width="296" height="80" alt="because th Grand Canyon sucks!">
       </div>
         <div class="index-tagline">
           СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,
@@ -56,17 +56,17 @@
           </div>
           <div class="info-needs">
             <div class="column info-housing">
-              <img src="img/index-house.png" width="100" height="100" alt="">
+              <img src="img/index-house.png" width="75" height="72" alt="house">
               <div class="info-housing-text">ЖИЛЬЕ</div>
               <div>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, КАК В КИНО!</div>
             </div>
             <div class="column info-food">
-              <img src="img/index-burger.png" width="100" height="100" alt="">
+              <img src="img/index-burger.png" width="75" height="72" alt="burger">
               <div class="info-food-text">ЕДА</div>
               <div>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ ЧИЗБУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</div>
             </div>
             <div class="column info-souvenirs">
-              <img src="img/index-gift.png" width="100" height="100" alt="">
+              <img src="img/index-gift.png" width="75" height="72" alt="gift">
               <div class="info-souvenirs-text">СУВЕНИРЫ</div>
               <div>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</div>
             </div>
@@ -133,14 +133,14 @@
           <p>#VISITSEDONA</p>
         </div>
         <section class="footer-social">
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-tw" href="#"><img src="img/t-logo.png" width="17" height="15" alt="twitter"></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/f-logo.png" width="10" height="19" alt="facebook"></a>
+          <a class="social-btn social-btn-you" href="#"><img src="img/y-logo.png" width="20" height="16" alt="youtube"></a>
         </section>
         <section class="footer-copyright">
           <p>WEBSITE BY</p>
           <a class="logo-image" href="#">
-            <img src="img/html-academy-logo.png" width="100" height="100" alt="">
+            <img src="img/html-academy-logo.png" width="113" height="39" alt="html academy logo">
           </a>
         </section>
       </div>
