--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <nav class="main-navigation">
+        <nav class="main-navigation clearfix">
           <ul class="main-navigation-left">
             <li>
-              <a href="#">ИНФОРМАЦИЯ</a>
+              <a href="#">Информация</a>
             </li>
             <li>
-              <a href="#">ФОТО И ВИДЕО</a>
+              <a href="#">Фото и видео</a>
             </li>
           </ul>
+          <div class="index-logo">
+            <img src="img/logo-both.png" width="138" height="70" alt="лого">
+          </div>
           <ul class="main-navigation-right">
             <li>
-              <a href="#">КАРТА ШТАТА</a>
+              <a href="#">Карта штата</a>
             </li>
             <li>
-              <a href="#">ГОСТИНИЦЫ</a>
+              <a href="#">Гостиницы</a>
             </li>
           </ul>
         </nav>
-        <div class="index-logo">
-          <img src="img/logo-both.png" width="138" height="70" alt="лого">
-        </div>
       </div>
     </header>
     <main class="container">
@@ -40,91 +40,91 @@
         <img class="taqline" src="img/index-Because-the-Grand-Canyon-sucks.png" width="296" height="80" alt="because th Grand Canyon sucks!">
       </div>
         <div class="index-tagline">
-          СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,
+          Седона - небольшой городок в Аризоне,
           <br>
-          ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!
+          заслуживающий большего!
         </div>
         <div class="index-reasons">
-          РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА ЛУЧШЕ, ЧЕМ ГРАНД КАНЬОН!
+          Рассмотрим 5 причин, по которым Седона лучше, чем Гранд Каньон!
         </div>
         <section class="index-city-info">
           <div class="info-main">
-            <div class="info-main-text">НАСТОЯЩИЙ ГОРОДОК
+            <div class="info-main-text">Настоящий городок
               <div class="info-main-number">- №1 -</div>
-              <div>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</div>
+              <div>Седона - не аттракцион для туристов, там течет своя жизнь</div>
             </div>
           </div>
           <div class="info-needs">
             <div class="column info-housing">
               <img src="img/index-house.png" width="75" height="72" alt="house">
-              <div class="info-housing-text">ЖИЛЬЕ</div>
-              <div>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, КАК В КИНО!</div>
+              <div class="info-housing-text">Жилье</div>
+              <div>Рекоммендуем пожить в настоящем мотеле, как в кино!</div>
             </div>
             <div class="column info-food">
               <img src="img/index-burger.png" width="75" height="72" alt="burger">
               <div class="info-food-text">ЕДА</div>
-              <div>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ ЧИЗБУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</div>
+              <div>Всегда заказывайте фирменный чизбургер, вы не разочаруетесь!</div>
             </div>
             <div class="column info-souvenirs">
               <img src="img/index-gift.png" width="75" height="72" alt="gift">
-              <div class="info-souvenirs-text">СУВЕНИРЫ</div>
-              <div>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</div>
+              <div class="info-souvenirs-text">Сувениры</div>
+              <div>Не только китайского, но и местного производства!</div>
             </div>
           </div>
         </section>
         <section class="index-city-attractions">
           <div class="attractions-main">
-            <div class="attractions-main-text">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА
+            <div class="attractions-main-text">Там есть мост дьявола
             <div class="attractions-main-number">- №2 -</div>
-            <div>ДА, ПО НЕМУ МОЖНО ПРОЙТИ, ЕСЛИ КОНЕЧНО ОСМЕЛИТЕСЬ!</div>
+            <div>Да, по нему можно пройти, если конечно осмелитесь!</div>
             </div>
           </div>
           <div class="attractions-logistics">
-            <div class="column attractions-square">
-              <div class="attractions-square-text">НЕБОЛЬШАЯ ПЛОЩАДЬ</div>
+            <div class="column-2 attractions-square">
+              <div class="attractions-square-text">Небольшая площадь</div>
               <div class="attractions-square-number">- №3 -</div>
-              <div>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО!</div>
+              <div>Все достопримечательности находятся очень близко!</div>
             </div>
-            <div class="column attractions-road">
-              <div class="attractions-road-text">КРАСИВАЯ ДОРОГА</div>
+            <div class="column-2 attractions-road">
+              <div class="attractions-road-text">Красивая дорога</div>
               <div class="attractions-road-number">- №4 -</div>
-              <div>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</div>
+              <div>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
             </div>
-            <div class="column attractions-tourists">
-              <div class="attractions-tourists-text">МАЛО ТУРИСТОВ</div>
+            <div class="column-2 attractions-tourists">
+              <div class="attractions-tourists-text">Мало туристов</div>
               <div class="attractions-tourists-number">- №5 -</div>
-              <div>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</div>
+              <div>Большинство идет в Гранд Каньон и толпится там</div>
             </div>
           </div>
         </section>
       <div class="index-booking">
-        <div class="interested">ЗАИНТЕРЕСОВАЛИСЬ?</div>
+        <div class="interested">Заинтересовались?</div>
         <div class="index-advice">
-          УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ,
+          Укажите предполагаемые даты поездки,
           <br>
-          И МЫ ПОКА ЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ
+          и мы покажем вам лучшие предложения гостиниц в Седоне
         </div>
-        <button class="index-hotel-search">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+        <button class="index-hotel-search">Поиск гостиницы в Седоне</button>
+      </div>
+      <div class="geolocation">
         <div class="index-modal">
           <form action="/echo" method="post">
             <fieldset>
-              <legend>БУКИНГ В СЕДОНЕ</legend>
+              <legend>Букинг в Седоне</legend>
               <div class="index-modal-title">
-                <label for="date-check-in">ДАТА ЗАЕЗДА:</label>
+                <label for="date-check-in">Дата заезда:</label>
                 <input type="date" id="date-check-in" required>
-                <label for="date-check-out">ДАТА ВЫЕЗДА:</label>
+                <label for="date-check-out">Дата выезда:</label>
                 <input type="date" id="date-check-out" required>
-                <label for="amount-adult">ВЗРОСЛЫЕ:</label>
+                <label for="amount-adult">Взрослые:</label>
                 <input type="number" min="1" max="50" step="1" id="amount-adult" name="amount-adult" required>
-                <label for="amount-children">ДЕТИ:</label>
+                <label for="amount-children">Дети:</label>
                 <input type="number" min="0" max="50" step="1" id="amount-children" name="amount-children">
-                <button class="index-btn">НАЙТИ</button>
+                <button class="index-btn">Найти</button>
               </div>
             </fieldset>
           </form>
         </div>
-      </div>
-      <div class="geolocation">
       </div>
     </main>
     <footer class="main-footer">
